<resources>
    <string name="app_name">Ветклініка Лапка</string>
    <string name="new_appointment">Запис на прийом</string>
    <string name="create">Створення</string>
    <string name="new_medcard">Медична карта</string>
    <string name="watch">Перегляд</string>
    <string name="pets">Домашні улюбленці</string>
    <string name="owners">Хазяїни</string>
    <string name="vets">Ветеринари</string>
    <string name="medhistory">Медична історія</string>
    <string name="appointment_history">Записи на прийом</string>
    <string name="to_back">Повернутися назад</string>
    <string name="search_record">Пошук запису</string>
    <string name="error">Помилка</string>
    <string name="add">Додати</string>
    <string name="no_records">Немає записів</string>
    <string name="filter_by">Фільтрувати за</string>
    <string name="name">Ім\'я</string>
    <string name="owner">Власник</string>
    <string name="breed">Порода</string>
    <string name="phone">Номер телефону</string>
    <string name="empty_field">Введіть фільтр</string>
    <string name="speciality">Спеціальність</string>
    <string name="date">Дата</string>
    <string name="pet">Улюбленець</string>
    <string name="vet">Ветеринар</string>
    <string name="diagnosis">Діагноз</string>
    <string name="complaint">Скарга</string>
    <string name="vet_today">Ветеринар (на сьогодні)</string>
    <string name="select_date">Виберіть дату</string>
    <string name="save">Зберегти</string>
    <string name="noCalendarFragment">Введіть дату вручну, не можливо запустити засіб вибору</string>
    <string name="enter_text">Введіть текст…</string>
    <string name="create_record">Створення запису</string>
    <string name="cancel_changes">Скасувати зміни?</string>
    <string name="yes">Так</string>
    <string name="no">Ні</string>
    <string name="cancel">Скасувати</string>
    <string name="added">Запис додано</string>
    <string name="cantAdd">Не можливо запустити засіб створення/редагування запису</string>
    <string name="reload_page">Перезавантажте сторінку, для перегляду змін</string>
    <string name="dogs">Собаки</string>
    <string name="rodents">Гризуни</string>
    <string name="birds">Птиці</string>
    <string name="cats">Коти</string>
    <string name="no_text">Введіть дані</string>
    <string name="no_connection">Не вдалося з\'єднатися з сервером</string>
    <string name="error_server">Помилка сервера. Зверніться до адміністратора</string>
    <string name="no_select">Не вибрано</string>
    <string name="gender">Стать</string>
    <string name="date_of_birth">Дата народження</string>
    <string name="features">Примітки</string>
    <string name="male">Самець</string>
    <string name="female">Самка</string>
    <string name="select_recor">Виберіть запис</string>
    <string name="select">Вибрати</string>
    <string name="date_hint">2024–09–31</string>
    <string name="info">Інформація</string>
    <string name="medcard">Медична карта</string>
    <string name="appointment">Запис</string>
    <string name="is_available">Доступний</string>
    <string name="treatment">Лікування</string>
    <string name="specie">Вид тварини</string>
    <string name="shared_data">Пов\'язані записи</string>
    <string name="action">Дії</string>
    <string name="edit">Редагувати дані</string>
    <string name="edited">Зміни збережено</string>
    <string name="edit_record">Редагування запису</string>
    <string name="write">Записати</string>
    <string name="select_patient">Вибір пацієнта</string>
    <string name="select_owner">Виберіть власника</string>
    <string name="select_pet">Виберіть улюбленця</string>
    <string name="complaint_label">Опис скарги</string>
    <string name="make_appointment">Призначення прийому</string>
    <string name="select_time">Виберіть час</string>
    <string name="select_vet">Оберіть ветеринара</string>
    <string name="create_appointment">Створення запису</string>
    <string name="select_date_and_time">Виберіть дату і час</string>
    <string name="selecting_appointment">Вибір запису</string>
    <string name="select_appointment">Оберіть запис</string>
    <string name="conclusion">Висновок</string>
    <string name="enter_ill">Введіть хворобу...</string>
    <string name="enter_cure">Введіть лікування...</string>
    <string name="create_medcard">Створення медкарти</string>
    <string name="num">Запис №</string>
    <string name="report">Звіт</string>
    <string name="save_pdf_error">Не вдалося зберегти. Перевірте, чи надано доступ до файлів</string>
    <string name="save_pdf">Звіт збережено до папки \"Документи\"</string>
</resources>