<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_item"
    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="16dp"
    android:orientation="vertical"
    android:paddingBottom="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextBold"
        android:text="@string/action"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/frameEditButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextBasic"
        android:textAlignment="textStart"
        android:background="@android:color/transparent"
        android:minHeight="48dp"
        android:drawablePadding="16dp"
        android:paddingVertical="16dp"
        android:drawableStart="@drawable/ic_edit"
        android:drawableEnd="@drawable/ic_next"
        android:text="@string/edit"
        style="@android:style/Widget.Material.Button.Borderless"
        android:layout_marginHorizontal="20dp"/>

    <CheckBox
        android:id="@+id/frameAvailableCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextBasic"
        android:text="@string/is_available"
        android:layout_marginHorizontal="16dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:visibility="gone"/>
</LinearLayout>