<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.appointment.CreateAppointmentActivity">

    <ua.sviatkuzbyt.vetcliniclapka.ui.elements.views.CenterToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appointmentToolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/appointmentScroll"
        android:layout_marginBottom="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/patientBack"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="-8dp"
                app:layout_constraintBottom_toBottomOf="@+id/selectPetButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/background_item"/>

            <TextView
                android:id="@+id/patientLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="36dp"
                android:text="@string/select_patient"
                android:textAppearance="@style/TextBold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/selectOwnerButton"
                style="@style/SelectButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:drawableStart="@drawable/ic_people_one"
                android:text="@string/select_owner"
                app:layout_constraintTop_toBottomOf="@+id/patientLabel" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/selectPetButton"
                style="@style/SelectButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:drawableStart="@drawable/ic_pet_small"
                android:text="@string/select_pet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectOwnerButton" />

            <View
                android:id="@+id/complaintBack"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="-16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="-8dp"
                android:background="@drawable/background_item"
                app:layout_constraintBottom_toBottomOf="@+id/editTextComplaint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/complaintLabel" />

            <TextView
                android:id="@+id/complaintLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="36dp"
                android:text="@string/complaint_label"
                android:textAppearance="@style/TextBold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/patientBack" />

            <EditText
                android:id="@+id/editTextComplaint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:ems="10"
                android:hint="@string/enter_text"
                android:importantForAutofill="no"
                android:inputType="textMultiLine|textCapSentences"
                android:drawableStart="@drawable/ic_text"
                android:drawablePadding="16dp"
                android:textAppearance="@style/TextBasic"
                android:background="@android:color/transparent"
                android:paddingVertical="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/complaintLabel" />

            <View
                android:id="@+id/appointmentBack"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="-16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_item"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/makeAppointmentLabel" />

            <TextView
                android:id="@+id/makeAppointmentLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="36dp"
                android:text="@string/make_appointment"
                android:textAppearance="@style/TextBold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/complaintBack" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/SelectButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/makeAppointmentLabel"
                android:drawableStart="@drawable/ic_appointment_small"
                android:text="@string/select_time"
                android:id="@+id/selectTimeButton"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/selectVetButton"
                style="@style/SelectButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="8dp"
                android:drawableStart="@drawable/ic_vet_small"
                android:text="@string/select_vet"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectTimeButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/ButtonCreate"
        android:text="@string/write"
        android:id="@+id/appointmentCreateButton"/>
</LinearLayout>